salesforce/force-app/main/default/objects/Ventus_Decision__c/Ventus_Decision__c.object-meta.xml
<CustomObject>
    <description>FSC mirror of a governed Ventus Decision Package. Ventus remains the canonical decision and outcome ledger.</description>
    <label>Ventus Decision Receipt</label>
    <nameField>
        <displayFormat>VD-{000000}</displayFormat>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventus Decision Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>