salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Business_Objective__c.field-meta.xml
<CustomField>
    <fullName>Business_Objective__c</fullName>
    <label>Business Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>