salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ventus Decision Receipts</relationshipLabel>
    <relationshipName>Ventus_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>