salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Customer_Moment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Moment__c</fullName>
    <label>Customer Moment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>