salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Decision_Package__c.field-meta.xml
<CustomField>
    <fullName>Decision_Package__c</fullName>
    <label>Decision Package</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>