salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Decision_Reference__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Decision Reference</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>