salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Evidence_Class__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Class__c</fullName>
    <label>Evidence Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>