salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Growth_Play__c.field-meta.xml
<CustomField>
    <fullName>Growth_Play__c</fullName>
    <label>Growth Play</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>