salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Human_Response__c.field-meta.xml
<CustomField>
    <fullName>Human_Response__c</fullName>
    <label>Human Response</label>
    <length>40</length>
    <type>Text</type>
</CustomField>