salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Outcome_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Amount__c</fullName>
    <label>Outcome Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>