salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Outcome_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Event_Type__c</fullName>
    <label>Outcome Event Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>