salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Outcome_Metric__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Metric__c</fullName>
    <label>Outcome Metric</label>
    <length>100</length>
    <type>Text</type>
</CustomField>