salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Outcome_Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Occurred_At__c</fullName>
    <label>Outcome Occurred At</label>
    <type>DateTime</type>
</CustomField>