salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Outcome_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Reason_Code__c</fullName>
    <label>Outcome Reason Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>