salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Outcome_Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Source_Record_Id__c</fullName>
    <label>Outcome Source Record ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>