salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Outcome_Status__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Status__c</fullName>
    <label>Outcome Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>