salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>Schema_Version__c</fullName>
    <label>Schema Version</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>