salesforce/force-app/main/default/objects/Ventus_Decision__c/fields/Workflow_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Record_Id__c</fullName>
    <label>Workflow Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>